--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,3 +2,12 @@
   padding: 0;
   margin: 0;
 }
+
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+}
